--- a/style.css
+++ b/style.css
@@ -18,3 +18,12 @@ body, html{
     background-color: rgba(223, 9, 9, 0);
     background-image: url("./images/flappybirdbg.png");
 }
+@media (max-width: 600px) {
+    body,html{
+        background-image: none;
+    }
+    #board{
+        width: 100%;
+        height: 99%;
+    }   
+}
